# docker_cpp

./: .gitignore  .gitmodules  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
freertos_cpp/: .gitmodules  CMakeLists.txt  main.cpp
freertos_cpp/static_mem/: static_mem_alloc.c  static_mem_alloc.h
mutithreading_cpp/demos/: multithread_demo.cpp
notebook/: 10_Operator_Overloading.ipynb  11_Smart_Pointers.ipynb  12_Exception_Handling.ipynb  13_File_IO.ipynb  14_STL.ipynb  15_Lambda_Expressions.ipynb  16_enumerations.ipynb  1_basic.ipynb  2_basic_string.ipynb  3_basic_vector.ipynb  4_basic_namespace.ipynb  5_functions.ipynb  6_pointers_references_mem.ipynb  7_OOPs.ipynb  8_Inheritance.ipynb  9_Polymorphism.ipynb  README.md  basic.ipynb  cpp.ipynb  intermiadiate.ipynb  multithreading.ipynb  socket_programming.ipynb
protobufs/: CMakeLists.txt  PROTO_BUFS.ipynb
protobufs/src/: main.cpp
protobufs/src/proto/: CMakeLists.txt  address_book.proto  date_pkg.proto  person.proto
sockets_cpp/demos/: demo_client.cpp  demo_multhreaded_server.cpp  demo_multi_cleint.cpp  demo_server.cpp
volansys_cpp_advanced/10_OOPS_P2/: constructor_delegation.cpp  deep_copy.cpp  lvalue_rvalue.cpp  move_constructor.cpp  named_constructor_idiom.cpp  private_constructor.cpp  shallow_copy.cpp  singleton_design_class.cpp  volansys_ex1.cpp
volansys_cpp_advanced/11_Inheritance/: constructor_multiple_base_cl.cpp  copy_constructor_for_inherited_class.cpp  dynamic_cast.cpp  hierrarchial_inheritance.cpp  hybrid_inheritance.cpp  inheritance_demo.cpp  multilevel_inheritance.cpp  multipath_inherit_virtual_base_cl.cpp  multipath_inheritance.cpp  multiple_inheritance.cpp  sinle_inheritance.cpp  volansys_ex1.cpp  volansys_ex2.cpp  volansys_ex3.cpp
volansys_cpp_advanced/12_Polymorphism/: abstract_class.cpp  dynamic_alloc_polymorphism.cpp  employee_database_example.cpp  pure_virtual_func.cpp  runtime_polymorphism.cpp  virtual_base.cpp  volansys_ex1.cpp
volansys_cpp_advanced/13_Operator_Overloading/: friend_func_diff_operands.cpp  friend_func_minMax.cpp  friend_func_op_overload.cpp  member_func_op_overload.cpp  operator_overloading_complex_no.cpp  stream_operators_overloading.cpp
volansys_cpp_advanced/14_Smart_Pointers/: custom_deleter.cpp  custom_deleter2.cpp  demo_smart_pointers.cpp  demo_smart_ptrs2.cpp  make_unique.cpp  passing_unique_ptr_to_func.cpp  return_from_func_unique_ptr.cpp  shared_ptr.cpp  shared_ptr_class_mem.cpp  shared_ptr_pass_to_func.cpp  shared_ptr_return.cpp  template_smart_pointers.cpp  unique_ptr.cpp  unique_ptr2.cpp  unique_ptr_pass_observer_func.cpp  volansys_ex1.cpp  volansys_ex2.cpp  volansys_ex3.cpp  weak_ptr.cpp  weak_ptr2.cpp
volansys_cpp_advanced/21_Volanys_Mega_Exercise/daadu_multiplayer/client/: CMakeLists.txt  Makefile
volansys_cpp_advanced/21_Volanys_Mega_Exercise/daadu_multiplayer/client/inc/: async_client.h  client_screen.h  game_event.h  game_menu.h  game_objects.h  game_state.h  json_defines.h  player.h
volansys_cpp_advanced/21_Volanys_Mega_Exercise/daadu_multiplayer/client/src/: async_client.cpp  client_screen.cpp  game_event.cpp  game_menu.cpp  game_state.cpp  main_client.cpp  player.cpp
(+253 files in other folders)
